--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: Arushi Talwar
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "aboutme"
+  About Me: "AboutArushi"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
