--- a/_config.yml
+++ b/_config.yml
@@ -90,9 +90,9 @@ feed_show_tags: true
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#ADD8E6"
-navbar-text-col: "#404040"
-navbar-border-col: "#DDDDDD"
+navbar-col: "#C1ECFA"
+navbar-text-col: "#8971AB"
+navbar-border-col: "#D9C1FB"
 page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
