--- a/_config.yml
+++ b/_config.yml
@@ -93,10 +93,10 @@ feed_show_tags: true
 navbar-col: "#C1ECFA"
 navbar-text-col: "#8971AB"
 navbar-border-col: "#D9C1FB"
-page-col: "#FFFFFF"
+page-col: "#E3FFD4"
 text-col: "#404040"
 link-col: "#008AFF"
-hover-col: "#0085A1"
+hover-col: "#FFD4E3"
 footer-col: "#EAEAEA"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
