--- a/_config.yml
+++ b/_config.yml
@@ -90,10 +90,10 @@ feed_show_tags: true
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#C1ECFA"
-navbar-text-col: "#8971AB"
+navbar-col: "#FFD4E3"
+navbar-text-col: "#A45C40"
 navbar-border-col: "#D9C1FB"
-page-col: "#E3FFD4"
+page-col: "#F6EEE0"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#FFD4E3"
