--- a/_config.yml
+++ b/_config.yml
@@ -96,8 +96,8 @@ navbar-border-col: "#D9C1FB"
 page-col: "#F6EEE0"
 text-col: "#404040"
 link-col: "#008AFF"
-hover-col: "#FFD4E3"
-footer-col: "#EAEAEA"
+hover-col: "#658EA9"
+footer-col: "#D9E4EC"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
